syntax = "proto3";

package example;

service Hello {
  rpc HelloUnary(HelloRequest) returns (HelloResponse) {}
  rpc HelloClientStreaming(stream HelloRequest) returns (HelloClientStreamingResponse) {}
  rpc HelloServerStreaming(HelloServerStreamingRequest) returns (stream HelloResponse) {}
  rpc HelloBidiStreaming(stream HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest { string name = 1; }
message HelloServerStreamingRequest { repeated string names = 1; }
message HelloResponse { string message = 1; }
message HelloClientStreamingResponse { repeated string messages = 1; }